# DGSI

DGSI-week-04/: .gitignore  tool_calling.py
DGSI-week-06/: GEMINI.md  TESTING.md  architecture.md  prd.md  report.md
DGSI-week-06/manufacturer/: requirements.txt
DGSI-week-06/manufacturer/app/: cli.py
DGSI-week-06/manufacturer/app/core/: config.py
DGSI-week-06/manufacturer/app/models/: purchase_order.py
DGSI-week-06/manufacturer/dashboard/: pages.py  style.py
DGSI-week-06/manufacturer/docker/: Dockerfile  entrypoint.sh
DGSI-week-06/provider/: provider-cli  pyproject.toml
DGSI-week-06/provider/app/: cli.py  main.py
DGSI-week-06/provider/app/api/: schemas.py
DGSI-week-06/provider/app/api/endpoints/: catalog.py  import_export.py  stock.py
DGSI-week-06/provider/app/core/: database.py
DGSI-week-06/provider/app/data/: seed-provider.json
DGSI-week-06/provider/app/models/: event.py  simulation.py
DGSI-week-06/provider/app/services/: provider_service.py  seed.py
DGSI-week-06/provider/app/utils/: json_export.py
DGSI-week-07/: GEMINI.md  README.md
DGSI-week-07/config/: sim.json
DGSI-week-07/docs/: prd.md  report_template.md  turn_engine_spec.md
DGSI-week-07/manufacturer/: README.md
DGSI-week-07/manufacturer/app/: cli.py
DGSI-week-07/manufacturer/docker/: docker-compose.yml
DGSI-week-07/manufacturer/docs/: PRD.md
DGSI-week-07/provider/: README.md  requirements.txt
DGSI-week-07/provider/app/: cli.py  main.py
DGSI-week-07/scenarios/: smoke-test.json
DGSI-week-07/skills/: manufacturer-manager.md
(+17 files in other folders)
